Thu Feb  6 20:29:00 2003  Tim Janik  <timj@gtk.org>

	* bseprocidl.cc: g++-3.2 wants std:: namespacing for strings and sets.

Tue Feb  4 18:20:31 2003  Tim Janik  <timj@gtk.org>

	* bseitem.proc: provide bse-item-set-name().

Fri Jan 31 19:37:31 2003  Tim Janik  <timj@gtk.org>

	* bsetrack.[hcp]*: implemented part lists.

	* bsetrack.proc: added track procedures to modified part list.

	* bsepart.[hc]: get rid of ppqn which is provided by songs now.

	* bsesong.[hc]: provide tpqn (ticks per quarter note) and qnpt
	(quarter notes per tact) properties.

	* misc doc fixes.

Thu Jan 23 01:40:09 2003  Alper Ersoy <dirt@gtk.org>

	* bseautodoc.c: adjusted linebreaks around revision lines.

Wed Jan 22 23:24:50 2003  Tim Janik  <timj@gtk.org>

	* bsecontainer.[hc]: supply sequential ID with ::item-removed as this
	can't be retrieved afterwards.

	* bsecontainer.proc: export proc to actually fetch an item via its type
	and sequential id.

Tue Jan 21 03:42:08 2003  Tim Janik  <timj@gtk.org>

	* bsemidireceiver.c (bse_midi_receiver_process_events): keep
	processing events until the specified max_tick_stamp is reached.

	* bseproject.[hc]: bse_project_keep_activated() keep the project
	from automatic deactivation until a certain tick stamp is reached.

	* bsesong.proc: added procedures to find a track for a part, suitable
	for live playing of notes and to synthesize track notes for immediate
	playback.

Mon Jan 20 11:18:02 2003  Tim Janik  <timj@gtk.org>

	* bseproject.[hcp]: changed playback and activation logic.
	project playback happens in stages activate, start_playback,
	stop_playback and deactivate. a project can be automatically
	stopped due to the sequencer reaching song ends, and a project
	can be automatically deactivated through a timeout.
	export the new interface in procedures.

	* bseglobals.[hc] (bse_idle_timed): added timeout functions.

Thu Jan 16 23:27:51 2003  Tim Janik  <timj@gtk.org>

	* bseproject.[hcp]*:
